@@ -1,3 +1,9 @@
+2007-07-11  Christian Persch  <chpe@gnome.org>
+
+	* data/default-prefs-common.js:
+
+	Use the right prefs to disable CUPS.
+
 2007-07-11  Luca Ferretti  <elle.uca@libero.it>
 
 	* data/chrome/about.xhtml:
